--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
             cursor: pointer;
             color: red;
         }
+        #instructions {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            z-index: 100;
+            background: rgba(0, 0, 0, 0.7); /* Dark background with opacity */
+            color: white; /* White text for contrast */
+            padding: 15px 10px;
+            border-top: 1px solid rgba(255, 255, 255, 0.3);
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            font-size: 1rem;
+            text-align: center;
+        }
+
+     #instructions p {
+            margin: 0 15px; /* Space between each instruction */
+        }
+
+
     </style>
 </head>
 <body>
@@ -43,243 +66,18 @@
         <h3>Task History</h3>
         <div id="history-list"></div>
     </div>
+    <div id="instructions">
+        <p>1. Enter a task in the input box and click "Add" to add a task.</p>
+        <p>2. The task will appear as 3D text floating above the floor.</p>
+        <p>3. To delete a task, click the "Delete" button next to the task in the history list.</p>
+        <p>4. The deleted task will animate to the person's head, drop to the floor, and explode into particles.</p>
+        <p>5. Use the mouse to navigate the 3D space with OrbitControls.</p>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
-    <script>
-        // Scene setup
-const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-const renderer = new THREE.WebGLRenderer();
-renderer.setSize(window.innerWidth, window.innerHeight);
-
-// Set background color
-renderer.setClearColor(0xf0f0f0); // Light gray color
-
-document.body.appendChild(renderer.domElement);
-
-// Add ambient light
-const ambientLight = new THREE.AmbientLight(0x404040); // soft white light
-scene.add(ambientLight);
-
-// Add directional light
-const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-directionalLight.position.set(5, 10, 7.5).normalize();
-scene.add(directionalLight);
-
-// Floor
-const floorGeometry = new THREE.PlaneGeometry(100, 100);
-const floorMaterial = new THREE.MeshBasicMaterial({ color: 0xaaaaaa, side: THREE.DoubleSide });
-const floor = new THREE.Mesh(floorGeometry, floorMaterial);
-floor.rotation.x = -Math.PI / 2; // Rotate to be horizontal
-floor.position.y = -10; // Position floor lower to be visible
-scene.add(floor);
-
-// Display area for tasks
-const taskList = new THREE.Group();
-scene.add(taskList);
-
-// Task data array
-let tasks = [];
-
-// Load font for text
-const loader = new THREE.FontLoader();
-loader.load('https://cdn.jsdelivr.net/npm/three@0.132.2/examples/fonts/helvetiker_regular.typeface.json', function (font) {
-    // Add item function
-    window.addItem = function () {
-        const input = document.getElementById('todo-input');
-        const taskText = input.value;
-        if (taskText) {
-            const yOffset = tasks.length * 10; // Spacing between tasks
-            const geometry = new THREE.TextGeometry(taskText, {
-                font: font,
-                size: 4, // Adjust size for better visibility
-                height: 1,
-                curveSegments: 12,
-                bevelEnabled: true, // Add bevel for better appearance
-                bevelThickness: 0.5,
-                bevelSize: 0.25,
-                bevelOffset: 0,
-                bevelSegments: 5
-            });
-            const material = new THREE.MeshStandardMaterial({
-                color: 0x000000, // Text color
-                emissive: 0xdddddd, // Light glow effect
-                roughness: 0.4, // Slightly shiny
-                metalness: 0.2 // Slightly metallic
-            });
-            const textMesh = new THREE.Mesh(geometry, material);
-            textMesh.position.set(0, yOffset, 0);
-
-            // Store task data
-            const taskId = tasks.length;
-            tasks.push({ id: taskId, text: taskText, mesh: textMesh });
-
-            // Add to scene
-            taskList.add(textMesh);
-
-            // Update history list
-            updateHistory();
-
-            input.value = ''; // Clear input
-        }
-    };
-
-    // Delete item function
-    window.deleteItem = function (id) {
-        // Remove task from task list
-        const taskIndex = tasks.findIndex(task => task.id === id);
-        if (taskIndex !== -1) {
-            const task = tasks[taskIndex];
-            
-            // Move to human's head
-            new TWEEN.Tween(task.mesh.position)
-                .to({ x: -10, y: 5, z: 0 }, 1000)
-                .easing(TWEEN.Easing.Quadratic.Out)
-                .onComplete(() => {
-                    // Drop down
-                    new TWEEN.Tween(task.mesh.position)
-                        .to({ y: -5 }, 1000)
-                        .easing(TWEEN.Easing.Bounce.Out)
-                        .onComplete(() => {
-                            // Create explosion
-                            createExplosion(task.mesh.position);
-                            // Remove from scene
-                            taskList.remove(task.mesh);
-                            tasks.splice(taskIndex, 1);
-                            // Update positions of remaining tasks
-                            tasks.forEach((task, index) => {
-                                task.mesh.position.setY(index * 10);
-                            });
-                            // Update history list
-                            updateHistory();
-                        })
-                        .start();
-                })
-                .start();
-        }
-    };
-
-    // Create explosion effect
-    function createExplosion(position) {
-        const explosionGroup = new THREE.Group();
-        for (let i = 0; i < 100; i++) {
-            const particleGeometry = new THREE.SphereGeometry(0.2, 4, 4);
-            const particleMaterial = new THREE.MeshBasicMaterial({ color: Math.random() * 0xffffff });
-            const particle = new THREE.Mesh(particleGeometry, particleMaterial);
-            particle.position.set(position.x, position.y, position.z);
-            explosionGroup.add(particle);
-
-            const randomDirection = {
-                x: (Math.random() - 0.5) * 20,
-                y: (Math.random() - 0.5) * 20,
-                z: (Math.random() - 0.5) * 20
-            };
-
-            new TWEEN.Tween(particle.position)
-                .to({ x: position.x + randomDirection.x, y: position.y + randomDirection.y, z: position.z + randomDirection.z }, 1000)
-                .easing(TWEEN.Easing.Quadratic.Out)
-                .onComplete(() => {
-                    explosionGroup.remove(particle);
-                })
-                .start();
-        }
-        scene.add(explosionGroup);
-
-        // Remove explosion group after animation
-        setTimeout(() => {
-            scene.remove(explosionGroup);
-        }, 1000);
-    }
-
-    // Update history list
-    function updateHistory() {
-        const historyList = document.getElementById('history-list');
-        historyList.innerHTML = '';
-        tasks.forEach(task => {
-            const taskItem = document.createElement('div');
-            taskItem.className = 'task-item';
-            taskItem.innerHTML = `
-                <span>${task.text}</span>
-                <span class="delete-button" onclick="deleteItem(${task.id})">Delete</span>
-            `;
-            historyList.appendChild(taskItem);
-        });
-    }
-});
-
-// OrbitControls
-const controls = new THREE.OrbitControls(camera, renderer.domElement);
-controls.enableDamping = true;
-controls.dampingFactor = 0.25;
-controls.enableZoom = true;
-
-// Add a simple person model
-function addPerson() {
-    const person = new THREE.Group();
-
-    // Head
-    const headGeometry = new THREE.BoxGeometry(2, 2, 2);
-    const headMaterial = new THREE.MeshBasicMaterial({ color: 0xffcc99 });
-    const head = new THREE.Mesh(headGeometry, headMaterial);
-    head.position.set(0, 5, 0);
-    person.add(head);
-
-    // Body
-    const bodyGeometry = new THREE.BoxGeometry(2, 3, 1);
-    const bodyMaterial = new THREE.MeshBasicMaterial({ color: 0x0000ff });
-    const body = new THREE.Mesh(bodyGeometry, bodyMaterial);
-    body.position.set(0, 2.5, 0);
-    person.add(body);
-
-    // Left Arm
-    const leftArmGeometry = new THREE.BoxGeometry(0.5, 2, 0.5);
-    const leftArmMaterial = new THREE.MeshBasicMaterial({ color: 0x0000ff });
-    const leftArm = new THREE.Mesh(leftArmGeometry, leftArmMaterial);
-    leftArm.position.set(-1.5, 3.5, 0);
-    person.add(leftArm);
-
-    // Right Arm
-    const rightArmGeometry = new THREE.BoxGeometry(0.5, 2, 0.5);
-    const rightArmMaterial = new THREE.MeshBasicMaterial({ color: 0x0000ff });
-    const rightArm = new THREE.Mesh(rightArmGeometry, rightArmMaterial);
-    rightArm.position.set(1.5, 3.5, 0);
-    person.add(rightArm);
-
-    // Left Leg
-    const leftLegGeometry = new THREE.BoxGeometry(0.5, 2, 0.5);
-    const leftLegMaterial = new THREE.MeshBasicMaterial({ color: 0x0000ff });
-    const leftLeg = new THREE.Mesh(leftLegGeometry, leftLegMaterial);
-    leftLeg.position.set(-0.5, 1, 0);
-    person.add(leftLeg);
-
-    // Right Leg
-    const rightLegGeometry = new THREE.BoxGeometry(0.5, 2, 0.5);
-    const rightLegMaterial = new THREE.MeshBasicMaterial({ color: 0x0000ff });
-    const rightLeg = new THREE.Mesh(rightLegGeometry, rightLegMaterial);
-    rightLeg.position.set(0.5, 1, 0);
-    person.add(rightLeg);
-
-    // Add person to the scene
-    scene.add(person);
-    person.position.set(-10, -10, 0); // Adjust position as needed
-}
-
-addPerson();
-
-// Animation loop
-function animate() {
-    requestAnimationFrame(animate);
-    controls.update(); // Update controls
-    TWEEN.update(); // Update TWEEN animations
-    renderer.render(scene, camera);
-}
-
-camera.position.set(0, 10, 50); // Adjusted to better view the scene
-camera.lookAt(0, 0, 0); // Ensure camera is pointing at the center of the scene
-
-animate();
-
-    </script>
+    <script src="app.js"></script>
 </body>
 </html>
